# floor_type_detection

./: CMakeLists.txt  README.md  conanfile.txt
src/: floor_type_detection.cpp
